--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>libs/</classpathPrefix>
                             <mainClass>
-                                Main
+                                org.example.Main
                             </mainClass>
                         </manifest>
                     </archive>
